Update font family

--- a/source/position/fixed.slim
+++ b/source/position/fixed.slim
@@ -56,6 +56,7 @@ scss:
     background-color: black;
     opacity: 0.8;
     filter: alpha(opacity=80);
+    font-family: 'Hiragino Sans GB', sans-serif;
   }
 
   #fixed-bottom {
@@ -63,4 +64,5 @@ scss:
     bottom: 0;
     left: 0;
     background-color: rgba(0, 0, 0, 0.8);
+    font-family: 'STHeiti', sans-serif;
   }
