Update UIkit grid page

--- a/source/layouts/uikit.slim
+++ b/source/layouts/uikit.slim
@@ -10,7 +10,7 @@ html
 
     == stylesheet_link_tag 'uikit/uikit'
     /== stylesheet_link_tag 'uikit/uikit.almost-flat'
-    == stylesheet_link_tag 'uikit/uikit.gradient'
+    /== stylesheet_link_tag 'uikit/uikit.gradient'
 
     == javascript_include_tag 'jquery'
     == javascript_include_tag 'uikit/uikit'
