Add justify-content page

--- a/source/flexbox/flex-flow.slim
+++ b/source/flexbox/flex-flow.slim
@@ -16,7 +16,7 @@ h2 flex-flow (direction: ltr;)
 
 - flex_flows.each do |flex_flow|
   h3
-    code
+    pre
       = "flex-flow: #{flex_flow}"
   .flex-container style="flex-flow: #{flex_flow}"
     - 10.times do |i|
