--- a/source/layouts/flexbox.slim
+++ b/source/layouts/flexbox.slim
@@ -16,6 +16,9 @@ html
         box-sizing: border-box;
         direction: ltr;
       }
+      h3 {
+        border-top: 1px dashed gray;
+      }
 
       /* color styles */
       .flex-container {
