--- a/source/layouts/bootstrap.slim
+++ b/source/layouts/bootstrap.slim
@@ -10,6 +10,7 @@ html
     title = data.page.title || "Blog"
 
     == javascript_include_tag 'jquery'
+    == javascript_include_tag 'bootstrap'
     == stylesheet_link_tag 'bootstrap'
 
   body class="#{page_classes}"
