--- a/source/layouts/pure.slim
+++ b/source/layouts/pure.slim
@@ -8,7 +8,7 @@ html
     /! Use title if it's in the page YAML frontmatter
     title = data.page.title || "The Middleman"
 
-    == stylesheet_link_tag 'pure'
+    == stylesheet_link_tag 'pure-all'
 
   body class="#{page_classes}"
     == yield
