--- a/source/layouts/bilibili.slim
+++ b/source/layouts/bilibili.slim
@@ -11,6 +11,7 @@ html
 
     == javascript_include_tag 'jquery'
     == javascript_include_tag 'bilibili'
+    == stylesheet_link_tag 'bilibili'
 
   body class="#{page_classes}"
     == yield
