Update bilibili icons

--- a/source/bilibili_gifs/index.slim
+++ b/source/bilibili_gifs/index.slim
@@ -3,6 +3,7 @@ layout: bilibili
 title: Bilibii gifs
 originalUrl: http://www.bilibili.com/index/index-icon.json
 ---
+/ curl --compressed http://www.bilibili.com/index/index-icon.json
 
 h1 Bilibili GIFs
 
