Add bilibili gifs sequence number

--- a/source/bilibili_gifs/index.slim
+++ b/source/bilibili_gifs/index.slim
@@ -32,6 +32,11 @@ javascript:
         'div',
         null,
         React.createElement(
+          'span',
+          null,
+          this.props.gif.id + ' '
+        ),
+        React.createElement(
           'a',
           {
             className: 'search-link',
